adaptação do projeto
Aqui fiz pequenas adaptações de formatação do projeto

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
                     </a>
                 </div> 
             </section>
-            <img src="Imagem (1).png" alt="Foto do Pedro"> 
+            <img src="./assets/Imagem (1).png" alt="Foto do Pedro"> 
         </main>
         <footer> 
             Desenvolvido por Pedro Carneiro
